<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_02"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mainheader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#6a3aa9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:minHeight="40dp"
            android:text="Merchandiser"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--<ImageView-->
            <!--android:id="@+id/imgnew_customer"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:src="@drawable/add_plus" />-->

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:src="@drawable/left_arrow" />



    </RelativeLayout>


    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="2dp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/hint_name" />
                </android.support.design.widget.TextInputLayout>

                <!--<TextView-->

                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0.5dp"-->
                <!--android:layout_marginTop="2dp" />-->



                <!--<TextView-->
                <!---->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0.5dp"-->
                <!--android:layout_marginTop="2dp" />-->

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_CNIC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_CNIC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/hint_CNIC" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_Mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_Mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/hint_Mobile" />
                </android.support.design.widget.TextInputLayout>

                <!--<android.support.design.widget.TextInputLayout-->
                    <!--android:id="@+id/input_layout_FatherName"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<EditText-->
                        <!--android:id="@+id/input_FatherName"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:singleLine="true"-->
                        <!--android:hint="@string/hint_FatherName" />-->
                <!--</android.support.design.widget.TextInputLayout>-->


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_AddressArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_AddressArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/hint_AddressArea" />
                </android.support.design.widget.TextInputLayout>

                <!--<android.support.design.widget.TextInputLayout-->
                    <!--android:id="@+id/input_layout_DOB"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<EditText-->
                        <!--android:id="@+id/input_DOB"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:singleLine="true"-->
                        <!--android:hint="@string/hint_DOB" />-->
                <!--</android.support.design.widget.TextInputLayout>-->

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_City"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_City"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/hint_City" />
                </android.support.design.widget.TextInputLayout>

                <!--<Button-->
                    <!--android:id="@+id/button"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginEnd="8dp"-->
                    <!--android:layout_marginStart="8dp"-->
                    <!--android:layout_marginTop="24dp"-->
                    <!--android:text="Pick Date"-->
                    <!--android:onClick="showDatePicker" />-->


                <!--<TextView-->
                <!--android:id="@+id/tv_datepicker"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:visibility="invisible"-->
                <!--android:text=""/>-->

                <Button android:id="@+id/btn_save"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Submit"
                    android:background="@color/heardercolor"
                    android:layout_marginTop="40dp"
                    android:textColor="@android:color/white"/>


                <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginBottom="20dp" />


            </LinearLayout>



        </ScrollView>

</LinearLayout>


